Layout issues + details

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -254,6 +254,7 @@ svg {
 /********* buttons years ****************/
 #years {
 	text-align: center;
+	margin-bottom: .5em;
 }
 
 #years span {
